refactoring: js semicolon

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,5 +4,7 @@
     "parserOptions": {},
     "env": {"browser": true},
     "globals": {},
-    "rules": {}
+    "rules": {
+        "semi": "error"
+    }
 }
