style: set app icon sizes to 1024x1024

--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -4,6 +4,7 @@
     "icons": [
         {
             "src": "/assets/app.svg",
+            "sizes": "1024x1024",
             "type": "image/svg+xml"
         }
     ],
