--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,23 +1,28 @@
 name: Go
-on: [push]
+on:
+  push:
+    branches: [master]
+  pull_request:
+    branches: [master]
 jobs:
-
   test:
     name: Test
     runs-on: ubuntu-latest
     steps:
-
     - name: Set up Go 1.13
       uses: actions/setup-go@v1
       with:
         go-version: 1.13
       id: go
-
     - name: Check out code into the Go module directory
       uses: actions/checkout@v1
-
-    - name: Test
+    - name: gofmt
+      run: test -z "$(gofmt -s -l . | tee /dev/stderr)"
+    - name: golint
+      run: test -z "$(golint ./... | tee /dev/stderr)"
+    - name: go vet
+      run: go vet ./...
+    - name: go test
       run: go test ./... -v
-
-    - name: Build
+    - name: go build
       run: go build -v .
