--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,13 +6,16 @@ on:
     branches: [master]
 jobs:
   test:
-    name: Test
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go: [ '1.15', '1.16' ]
+    name: Test Go ${{ matrix.go }}
     steps:
-    - name: Set up Go 1.13
+    - name: Set up Go ${{ matrix.go }}
       uses: actions/setup-go@v1
       with:
-        go-version: 1.13
+        go-version: ${{ matrix.go }}
       id: go
     - name: Check out code into the Go module directory
       uses: actions/checkout@v1
