--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -40,4 +40,4 @@ jobs:
     - name: Install modules
       run: yarn
     - name: Run ESLint
-      run: eslint . --ext .js,.jsx,.ts,.tsx
+      run: yarn lint
