--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,7 +5,7 @@ on:
   pull_request:
     branches: [master]
 jobs:
-  test:
+  go:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -33,3 +33,11 @@ jobs:
       run: go test ./... -v
     - name: go build
       run: make all
+  node:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Install modules
+      run: yarn
+    - name: Run ESLint
+      run: yarn lint
