--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -30,7 +30,7 @@ jobs:
     - name: go vet
       run: go vet ./...
     - name: go test
-      run: go test ./... -v
+      run: go test -race -v ./...
     - name: go build
       run: make all
   node:
